# Cubic

./: .gitignore  CMakeLists.txt  README.md  main.cpp  myapp
.cache/clangd/index/: main.cpp.9643686F452C8D30.idx  main.cpp.BD087B7B51194C80.idx  shaderPipeLine.h.8ECBF1D53BCE3F80.idx
notes/: basics.typ  myUnderstanding.txt  todo.txt
src/: fragmentShader.glsl  main.cpp  vertexShader.glsl
